# demo-bevy_robot

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
assets/ctm2f110/: ctm2f110.gltf
assets/ur5/: ur5.gltf
src/: draw_trail.rs  gripper_ctm2f110.rs  main.rs  robot_ur5.rs
