[package]
name = "demo-bevy_robot"
version = "0.1.3"
edition = "2021"


[dependencies]
nalgebra = "0.32"
bevy_egui = "0.21"
bevy_panorbit_camera = { version = "0.6", features = [ "bevy_egui" ] }
flume = "0.11"
wasm-bindgen = "0.2"
#web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element", "CustomEvent"] }
#serde = { version = "1.0", features = ["derive"] }
#serde-wasm-bindgen = "0.6"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "bevy_asset", "bevy_core_pipeline", "bevy_gizmos", "bevy_gltf", "bevy_pbr", "bevy_render", "bevy_scene",
    "bevy_sprite", "bevy_text", "bevy_winit", "multi-threaded", "ktx2", "tonemapping_luts", "zstd", "default_font",
    "webgl2"
]

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element", "CustomEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
